k8s/overlays/remote-ingress/server-am-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-am-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web8803
spec:
  rules:
  - host: server-am.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-am
            port:
              number: 8080
