k8s/overlays/remote-ingress/server-qm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-qm-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web8802
spec:
  rules:
  - host: server-qm.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-qm
            port:
              number: 8080
